Changed MobSOS-QV to new structure

--- a/mobsos-query-visualization-data/Dockerfile
+++ b/mobsos-query-visualization-data/Dockerfile
@@ -13,5 +13,5 @@ CMD sed -i "s#LAYERS_API_URI#${LAYERS_API_URI}#g" /opt/mobsos-query-visualizatio
 	sed -i "s#LAYERS_API_URI#${LAYERS_API_URI}#g" /opt/mobsos-query-visualization/etc/i5.las2peer.services.queryVisualization.QueryVisualizationService.properties && \
 	sed -i "s#QVS_DB_NAME#${QVS_DB_NAME}#g" /opt/mobsos-query-visualization/etc/i5.las2peer.services.queryVisualization.QueryVisualizationService.properties && \
 	sed -i "s#QVS2_DB_NAME#${QVS2_DB_NAME}#g" /opt/mobsos-query-visualization/etc/i5.las2peer.services.queryVisualization.QueryVisualizationService.properties && \
-	sed -i "s#SERVICE_OIDC_CLIENT_ID#${SERVICE_OIDC_CLIENT_ID}#g" /opt/mobsos-query-visualization/etc/i5.las2peer.services.queryVisualization.QueryVisualizationService.properties && \
+	sed -i "s#SERVICE_OIDC_CLIENT_ID#${QVS_OIDC_CLIENT_ID}#g" /opt/mobsos-query-visualization/etc/i5.las2peer.services.queryVisualization.QueryVisualizationService.properties && \
 	sed -i "s#SERVICE_APIURL#${SERVICE_APIURL}#g" /opt/mobsos-query-visualization/etc/i5.las2peer.services.queryVisualization.QueryVisualizationService.properties
