--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,5 @@ location /mobsos-qv/QVS/ {
 }
 
 location /mobsos-qv/ {
-    alias  /var/www/qv-frontend/;
-    index  index.html index.htm;
+    proxy_pass http://qvsfrontend:80/;
 }
-
