--- a/nginx.conf
+++ b/nginx.conf
@@ -3,5 +3,5 @@ location /mobsos-qv/QVS/ {
 }
 
 location /mobsos-qv/ {
-    proxy_pass http://qvsfrontend:80/;
+    proxy_pass http://qvsfrontend:80/qv-frontend/;
 }
